--- a/0/home.html
+++ b/0/home.html
@@ -4,14 +4,8 @@
 		Welcome to the digital health survey to explore digital health preferences and needs for older adults with poor sleep. Your responses to this will help us decide the most important requirements for the optimisation of our new sleep therapy app for this population. 
         <br><br>
         You are eligible to complete the survey if you are:<br>
-        <ol>
-            <li>
-                1. Over 60 years
-            </li>
-            <li>
-                2. have insomnia symptoms or meet criteria for a poor sleeper
-            </li>
-        </ol>
+                1. Over 60 years<br>
+                2. have insomnia symptoms or meet criteria for a poor sleeper<br><br>
 
 		All answers are anonymous and absolutely no identifiable data will be collected.
 		<br><br>
@@ -27,7 +21,7 @@
 				<a target="_blank" style="color:#000" href="https://woolcock.org.au"><img src='__CURRENT_PATH__/../../images/woolcock-logo.png' /></a>
 			</div>
 		</div>
-		<!--If you have any questions, please contact us on woolcock.asteriod@sydney.edu.au or 02 9114 0421<br><br>-->
+		<!--If you have any questions, please contact us on woolcock.asteroid@sydney.edu.au or 02 9114 0421<br><br>-->
 	</div>
 	<script>
 		function F__ID(){
