--- a/m/dsa-form.html
+++ b/m/dsa-form.html
@@ -263,7 +263,7 @@
                                     <h4><b>9. Which brand of wearable device do you use?</b> <br><i>(e.g. Fitbit, Nike, Apple Watch, Garmin)</i></h4>
                                     <fieldset class="subquestions">
                                         <label ><span class=""></span>
-                                            <input class='form-control' type="text" name=device required >
+                                            <input class='form-control' type="text" name=wearable required >
                                         </label><br>
                                     </fieldset>
                                 </div>
@@ -281,34 +281,34 @@
                                     <div class="questiongroup">
                                         <fieldset>
                                             <label class="checkboxes">
-                                                <input type="checkbox" name="device_use_0">
+                                                <input type="checkbox" name="wearable_use_0">
                                                 <span class="check_checkmark"></span>Communication</span>
                                              </label><br>
                                              <label class="checkboxes">
-                                                <input type="checkbox" name="device_use_1">
+                                                <input type="checkbox" name="wearable_use_1">
                                                 <span class="check_checkmark"></span>Fitness</span>
                                              </label><br>
                                              <label class="checkboxes">
-                                                <input type="checkbox" name="device_use_2">
+                                                <input type="checkbox" name="wearable_use_2">
                                                 <span class="check_checkmark"></span>Health</span>
                                              </label><br>
                                              <label class="checkboxes">
-                                                <input type="checkbox" name="device_use_3">
+                                                <input type="checkbox" name="wearable_use_3">
                                                 <span class="check_checkmark"></span>Navigation</span>
                                              </label><br>
                                              <label class="checkboxes">
-                                                <input type="checkbox" name="device_use_4">
+                                                <input type="checkbox" name="wearable_use_4">
                                                 <span class="check_checkmark"></span>Sport</span>
                                              </label><br>
                                              <label class="checkboxes">
-                                                <input type="checkbox" name="device_use_5">
+                                                <input type="checkbox" name="wearable_use_5">
                                                 <span class="check_checkmark"></span>Other use (please specify)</span>
                                              </label><br>
                                         </fieldset>
-                                        <div id=device_use_other__ID style='display:none'>
+                                        <div id=wearable_use_other__ID style='display:none'>
                                             <fieldset class="subquestions">
                                                 <label ><span class=""></span>
-                                                    <input class="form-control" type="text" name="device_use_other" placeholder="Please specify" >
+                                                    <input class="form-control" type="text" name="wearable_use_other" placeholder="Please specify" >
                                                 </label><br>
                                             </fieldset>
                                         </div>
@@ -328,42 +328,42 @@
                                     <div class="questiongroup">
                                         <fieldset>
                                             <label class="checkboxes">
-                                                <input type="checkbox" name="device_features_0">
+                                                <input type="checkbox" name="wearable_features_0">
                                                 <span class="check_checkmark"></span>Heart-rate monitoring</span>
                                              </label><br>
                                              <label class="checkboxes">
-                                                <input type="checkbox" name="device_features_1">
+                                                <input type="checkbox" name="wearable_features_1">
                                                 <span class="check_checkmark"></span>Sleep tracking</span>
                                              </label><br>
                                              <label class="checkboxes">
-                                                <input type="checkbox" name="device_features_2">
+                                                <input type="checkbox" name="wearable_features_2">
                                                 <span class="check_checkmark"></span>Step tracking</span>
                                              </label><br>
                                              <label class="checkboxes">
-                                                <input type="checkbox" name="device_features_3">
+                                                <input type="checkbox" name="wearable_features_3">
                                                 <span class="check_checkmark"></span>Sports or physical activity tracking</span>
                                              </label><br>
                                              <label class="checkboxes">
-                                                <input type="checkbox" name="device_features_4">
+                                                <input type="checkbox" name="wearable_features_4">
                                                 <span class="check_checkmark"></span>Stress tracking</span>
                                              </label><br>
                                              <label class="checkboxes">
-                                                <input type="checkbox" name="device_features_5">
+                                                <input type="checkbox" name="wearable_features_5">
                                                 <span class="check_checkmark"></span>Breathing or relaxation exercises</span>
                                              </label><br>
                                              <label class="checkboxes">
-                                                <input type="checkbox" name="device_features_6">
+                                                <input type="checkbox" name="wearable_features_6">
                                                 <span class="check_checkmark"></span>Workout intensity</span>
                                              </label><br>
                                              <label class="checkboxes">
-                                                <input type="checkbox" name="device_features_7">
+                                                <input type="checkbox" name="wearable_features_7">
                                                 <span class="check_checkmark"></span>Other (please specify)</span>
                                              </label><br>
                                         </fieldset>
-                                        <div id=device_features_other__ID style='display:none'>
+                                        <div id=wearable_features_other__ID style='display:none'>
                                             <fieldset class="subquestions">
                                                 <label ><span class=""></span>
-                                                    <input class="form-control" type="text" name="device_features_other" placeholder="Please specify" >
+                                                    <input class="form-control" type="text" name="wearable_features_other" placeholder="Please specify" >
                                                 </label><br>
                                             </fieldset>
                                         </div>
@@ -1056,24 +1056,24 @@
                     }
                 }
             });
-            $("input[name='device_use_5']").on('change', function () {
-                if($("input[name='device_use_5']:checked").val()=='on'){
-                    $('#device_use_other__ID').show();
-                    $("input[name='device_use_other']").prop('required', true)
+            $("input[name='wearable_use_5']").on('change', function () {
+                if($("input[name='wearable_use_5']:checked").val()=='on'){
+                    $('#wearable_use_other__ID').show();
+                    $("input[name='wearable_use_other']").prop('required', true)
                 }
                 else{
-                    $("input[name='device_use_other']").prop('required', false);
-                    $('#device_use_other__ID').hide();
+                    $("input[name='wearable_use_other']").prop('required', false);
+                    $('#wearable_use_other__ID').hide();
                 }
             })
-            $("input[name='device_features_7']").on('change', function () {
-                if($("input[name='device_features_7']:checked").val()=='on'){
-                    $('#device_features_other__ID').show();
-                    $("input[name='device_features_other']").prop('required', true)
+            $("input[name='wearable_features_7']").on('change', function () {
+                if($("input[name='wearable_features_7']:checked").val()=='on'){
+                    $('#wearable_features_other__ID').show();
+                    $("input[name='wearable_features_other']").prop('required', true)
                 }
                 else{
-                    $("input[name='device_features_other']").prop('required', false);
-                    $('#device_features_other__ID').hide();
+                    $("input[name='wearable_features_other']").prop('required', false);
+                    $('#wearable_features_other__ID').hide();
                 }
             })
 
