--- a/0/app.html
+++ b/0/app.html
@@ -63,8 +63,9 @@
         //-------------------------------------
     </script>
     <style main-style>
-        html,body{ margin:0; padding:0; height:100%; font-family:'Arial';}
+     /*   html,body{ margin:0; padding:0; height:100%; font-family:'Arial';}
         body{background-size: cover; background-repeat: repeat-x; background-position: center top; background-attachment: fixed;}
         .body_background_default{ background-image: url(https://images.unsplash.com/photo-1419242902214-272b3f66ee7a?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=900&ixid=MXwxfDB8MXxhbGx8fHx8fHx8fA&ixlib=rb-1.2.1&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1600);}
+        */
     </style>
 </div>
