--- a/0/footer.html
+++ b/0/footer.html
@@ -29,7 +29,7 @@
             margin-right:10px;
         }
         #footer{
-            /*height:90px;*/
+            height:0;
             overflow: hidden;
             color: #000;
             /*padding: 12px;*/
@@ -38,7 +38,7 @@
             text-align: center;
         }
         @media screen and (max-width: 1200px){
-            #footer{ height:200px; }
+            #footer{ height:0; }
         }
     </style>
 </div>
