--- a/0/header.html
+++ b/0/header.html
@@ -1,18 +1,5 @@
 <div id=D__ID>
     <div>
-        <!-- mobile -->
-        <div class=vm-mobile>
-            <span id=vm-mobile_title class=vm-mobile-title>Sleep Survey</span>
-            <a id="vm-hamburger_button" class=vm-hamburger-button onclick="$vm.toggle()"><i class="fa fa-bars"></i></a>
-        </div>
-        <!---------->
-
-        <!-- desktop -->
-        <div class=vm-desk-logo>
-        <!--            <div class=vm-logo-image></div> -->
-            <span id=vm-logo-label-A>Sleep Survey</span><br>
-        <!--            <span style=color:white> Only to be used for testing</span> -->
-        </div>
     </div>
     <script>
         //------------------------------------
@@ -25,7 +12,7 @@
     <style>
         /*----------------------*/
         #header{
-            height:100px;
+            height:0;
             position:fixed;
             top:0;
             left:0;
