--- a/m/dsa-form.html
+++ b/m/dsa-form.html
@@ -29,15 +29,15 @@
                                 <div class="form-group">
                                     <p> What is your sex?</p>
                                     <label class="container_radio">Male
-                                        <input type="radio" name="sex" value="0" class="required">
+                                        <input type="radio" name="sex" value="0" required>
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="container_radio">Female
-                                        <input type="radio" name="sex" value="1" class="required">
+                                        <input type="radio" name="sex" value="1" >
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="container_radio">Another term (please specify)
-                                        <input type="radio" name="sex" value="2" class="required">
+                                        <input type="radio" name="sex" value="2" >
                                         <span class="checkmark"></span>
                                     </label>
                                 </div>
@@ -49,13 +49,13 @@
                                 <div class="form-group">
                                     <p>What is your age?</p>
                                     <label ><span class=""></span>
-                                        <input class='form-control' type="number" min=18 max=99 name="age" class="required" >
+                                        <input class='form-control' type="number" min=18 max=99 name="age" required >
                                     </label>
                                 </div>
                                 <div class="form-group">
                                     <p>Which of the following best describes the <u>highest</u> level of education you have completed?</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="education" value="0" class="required" >
+                                        <input type="radio" name="education" value="0" required >
                                         <span class="checkmark"></span> Did not complete Primary school
                                     </label>
                                     <label class="container_radio">
@@ -136,7 +136,7 @@
                                 <div class="form-group">
                                     <p>How often do you use a smartphone?<br>(eg. iPhone, Samsung Galaxy or other touch screen mobile phone)</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="phone_use" value="0" class="required" >
+                                        <input type="radio" name="phone_use" value="0" required >
                                         <span class="checkmark"></span> Never
                                     </label>
                                     <label class="container_radio">
@@ -155,7 +155,7 @@
                                 <div class="form-group">
                                     <p>What type of phone do you use?<br>(eg. iPhone 12, Samsung Galaxy S21, Google Pixel 4 etc.)</p>
                                     <label ><span class=""></span>
-                                        <input class='form-control' type="text" name=phone class="required" >
+                                        <input class='form-control' type="text" name=phone required >
                                     </label>
                                 </div>
 
@@ -165,11 +165,11 @@
                                 <div class="form-group">
                                     <p>Do you use a wearable device?<br>(e.g. pedometer, fitness tracker, smart watch etc.)</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="wearable_use" value="0" class="required" >
+                                        <input type="radio" name="wearable" value="0" required >
                                         <span class="checkmark"></span> Yes
                                     </label>
                                     <label class="container_radio">
-                                        <input type="radio" name="wearable_use" value="1">
+                                        <input type="radio" name="wearable" value="1">
                                         <span class="checkmark"></span> No
                                     </label>
                                 </div>
@@ -180,7 +180,7 @@
                                 <div class="form-group">
                                     <p>Which brand of wearable device do you use?<br>(e.g. Fitbit, Nike, Apple Watch, Garmin)</p>
                                     <label ><span class=""></span>
-                                        <input class='form-control' type="text" name=wearable class="required" >
+                                        <input class='form-control' type="text" name=wearable_device required >
                                     </label>
                                 </div>
                                 <div class="form-group">
@@ -272,7 +272,7 @@
                                 <div class="form-group">
                                     <p>How often do you keep your phone by your bed at night?</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="phone_bed" value="0" class="required" >
+                                        <input type="radio" name="phone_bed" value="0" required >
                                         <span class="checkmark"></span> Every night
                                     </label>
                                     <label class="container_radio">
@@ -291,7 +291,7 @@
                                 <div class="form-group">
                                     <p>How often do you use your phone as an alarm clock?</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="phone_alarm" value="0" class="required" >
+                                        <input type="radio" name="phone_alarm" value="0" required >
                                         <span class="checkmark"></span> Every night
                                     </label>
                                     <label class="container_radio">
@@ -310,7 +310,7 @@
                                 <div class="form-group">
                                     <p>How often do you use your phone first thing in the morning (eg. checking email, social media or web browsing as soon as you wake)?</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="phone_morning" value="0" class="required" >
+                                        <input type="radio" name="phone_morning" value="0" required >
                                         <span class="checkmark"></span> Every morning
                                     </label>
                                     <label class="container_radio">
@@ -333,7 +333,7 @@
                                 <div class="form-group">
                                     <p>If an app were developed that <u>guided you through a program proven to improve sleep,</u> how likely do you think you would be to try it?</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="app_guide" value="0" class="required" >
+                                        <input type="radio" name="app_guide" value="0" required >
                                         <span class="checkmark"></span> Very unlikely
                                     </label>
                                     <label class="container_radio">
@@ -352,7 +352,7 @@
                                 <div class="form-group">
                                     <p>If an app were developed to help you <u>optimise your sleep, in order to improve productivity and performance,</u> how likely do you think you would be to try it?</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="app_performance" value="0" class="required" >
+                                        <input type="radio" name="app_performance" value="0" required >
                                         <span class="checkmark"></span> Very unlikely
                                     </label>
                                     <label class="container_radio">
@@ -371,7 +371,7 @@
                                 <div class="form-group">
                                     <p>If an app were personalisable to help you <u>discover your true individual sleep needs</u> (e.g., how many hours you really need each night), how likely do you think you would be to try it?</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="app_needs" value="0" class="required" >
+                                        <input type="radio" name="app_needs" value="0" required >
                                         <span class="checkmark"></span> Very unlikely
                                     </label>
                                     <label class="container_radio">
@@ -395,7 +395,7 @@
                                     <p>If an ideal sleep app were developed, how important do you think it would be for it to...</p>
                                         <p>Include a sleep diary and tracking…</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="app_sleep_diary" value="0" class="required" >
+                                        <input type="radio" name="app_sleep_diary" value="0" required >
                                         <span class="checkmark"></span> Unimportant
                                     </label>
                                     <label class="container_radio">
@@ -414,7 +414,7 @@
                                 <div class="form-group">
                                         <p>Allow tracking of diet, exercise and other lifestyle factors…</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="app_lifestyle" value="0" class="required" >
+                                        <input type="radio" name="app_lifestyle" value="0" required >
                                         <span class="checkmark"></span> Unimportant
                                     </label>
                                     <label class="container_radio">
@@ -438,7 +438,7 @@
                                     <p>If an ideal sleep app were developed, how important do you think it would be for it to...</p>
                                         <p>Let you share or compare sleep data with friends or other users…</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="app_share_friends" value="0" class="required" >
+                                        <input type="radio" name="app_share_friends" value="0" required >
                                         <span class="checkmark"></span> Unimportant
                                     </label>
                                     <label class="container_radio">
@@ -457,7 +457,7 @@
                                 <div class="form-group">
                                         <p>Let you share sleep data with your doctor…</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="app_share_doctor" value="0" class="required" >
+                                        <input type="radio" name="app_share_doctor" value="0" required >
                                         <span class="checkmark"></span> Unimportant
                                     </label>
                                     <label class="container_radio">
@@ -481,7 +481,7 @@
                                     <p>If an ideal sleep app were developed, how important do you think it would be for it to...</p>
                                         <p>Link to a wearable tracking device (eg. Fitbit, Apple Watch, ActiWatch)…</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="app_linked" value="0" class="required" >
+                                        <input type="radio" name="app_linked" value="0" required >
                                         <span class="checkmark"></span> Unimportant
                                     </label>
                                     <label class="container_radio">
@@ -500,7 +500,7 @@
                                 <div class="form-group">
                                         <p>Be usable offline (without an internet connection)…</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="app_offline" value="0" class="required" >
+                                        <input type="radio" name="app_offline" value="0" required >
                                         <span class="checkmark"></span> Unimportant
                                     </label>
                                     <label class="container_radio">
@@ -519,7 +519,7 @@
                                 <div class="form-group">
                                     <p>Not require the phone to be by the bed…</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="app_bed" value="0" class="required" >
+                                        <input type="radio" name="app_bed" value="0" required >
                                         <span class="checkmark"></span> Unimportant
                                     </label>
                                     <label class="container_radio">
@@ -601,11 +601,11 @@
                                 <div class="form-group">
                                     <p>I would like to take part in the prize draw for 1 of 3 eVouchers valued at $200.</p>
                                     <label class="container_radio">
-                                        <input type="radio" name="voucher" value="0" class="required" >
+                                        <input type="radio" name="voucher" value="Yes" required >
                                         <span class="checkmark"></span> Yes
                                     </label>
                                     <label class="container_radio">
-                                        <input type="radio" name="voucher" value="1">
+                                        <input type="radio" name="voucher" value="No">
                                         <span class="checkmark"></span> No
                                     </label>
                                 </div>
@@ -643,7 +643,7 @@
     <script>
         function F__ID() {
             //-------------------------------------
-            VmInclude: __COMPONENT__/f/form.01.js
+            VmInclude: __CURRENT_PATH__/form.01.js
             //-------------------------------------
             var N = 16;
             var current_I = 1;
@@ -661,7 +661,7 @@
                 if ( $('[type="date"]').prop('type') != 'date' ) {
                     $('[type="date"]').datepicker();
                 }
-                show_section(14);
+                show_section(1);
             }
             //---------------------------------------
             var old_submit = m.submit;
@@ -670,15 +670,19 @@
                 if (current_I == N) {
                     $('#F__ID *').removeAttr('disabled');
                     $('#submit1__ID').hide();
+                    $('#previous__ID').hide();
                     var entryID=""
                     if(m.input.entry_id!=undefined){
                         entryID=m.input.entry_id
                     }
                     $('#entry__ID').val(entryID);
                     old_submit(event);
+                    if (m.prefix == undefined) { $vm.load_module('thanks', '', {}); }
+                    else $vm.load_module(m.prefix + 'thanks', '', {});
+
                 }
                 else {
-                    if($("input[name='wearable_use']:checked").val()=='1' && current_I==4){
+                    if($("input[name='wearable']:checked").val()=='1' && current_I==4){
                         current_I=6
                     }
                     if(current_I==N-1){
@@ -694,7 +698,7 @@
                 var d = $(this).attr("d");
                 d = parseInt(d);
                 if (d < 0) {
-                    if($("input[name='wearable_use']:checked").val()=='1' && current_I==7){
+                    if($("input[name='wearable']:checked").val()=='1' && current_I==7){
                         current_I=5
                     }                
                     if(current_I==N){
