--- a/0/app.html
+++ b/0/app.html
@@ -7,7 +7,7 @@
         $vm.api_address="https://api.wappsystem.com";
         if(window.location.toString().indexOf('_p=1')!=-1) $vm.api_address="https://api.wappsystem.com:3000";
         //------------------------------------
-        $vm.default_title="Asteriod Survey";
+        $vm.default_title="Digital Health Survey";
         //------------------------------------
         var ready1=function(){
             var set_layout=function(){                
@@ -25,9 +25,10 @@
                 document.title=$vm.default_title;
                 if(nm!=""){
                     var name=nm.charAt(0).toUpperCase() + nm.slice(1)
-                    document.title=name+" | "+$vm.default_title;
+                    //document.title=name+" | "+
+                    $vm.default_title;
                 }
-                $("meta[name='description']").attr("content", "Asteriod Survey");
+                $("meta[name='description']").attr("content", "Digital Health Survey");
                 $("body").removeClass();
                 $("body").addClass('body_background_default');
                 $vm.active_id=undefined;
