--- a/m/dsa-form.html
+++ b/m/dsa-form.html
@@ -46,12 +46,12 @@
                                         <input class="form-control" type="text" name="sex_other" placeholder="Please specify" >
                                     </label>
                                 </div>
-                                <div class="form-group">
+                                <!--<div class="form-group">
                                     <p>What is your age?</p>
                                     <label ><span class=""></span>
                                         <input class='form-control' type="number" min=18 max=99 name="age" required >
                                     </label>
-                                </div>
+                                </div>-->
                                 <div class="form-group">
                                     <p>Which of the following best describes the <u>highest</u> level of education you have completed?</p>
                                     <label class="container_radio">
